@@ -9,25 +9,27 @@ AUX icinga-lighty.conf 465 SHA256 f4059bc54959fb2544f23c2fc6a86f0ab2467025ce1f46
 AUX ido2db-conf.d 35 SHA256 6cbdf0eb7070121bd466c221d73cf6ca05a4af5caa1d4abedf62828edd1b1372 SHA512 c2988f205ce29daaacd2daa20ceb285da2b76e2a68bb5dd695874e73b275714eaea5e0b6bb0afaf7e5d875a9e89ee35c7dfcdb5c77513b2f1a59fbbd28f49f4f WHIRLPOOL 7816a44592582b65bb05b7c568af29885ab547b0164582d939e37b937ddc0cfa3dfc503b8673042b5ce60e0b19ba96dcfe08e13882c8bbae80d9750411945966
 AUX ido2db-init.d 936 SHA256 4e978d54b9b5efde1e4474d865d6283eeafa2a57a2ad19ec85a710e79698c456 SHA512 913e923f297281e6a429ac446a20f6b8e8fadbc5dc5b1a01f1b5d73694ebd43e0931e655194593c8335bfc6505bb47b7321b8d6530c869f1bd8b262ad030faaa WHIRLPOOL 0da5e0702535cb9e07f98cabfad9f6ce0999d5d7a60e66494ca3d4167537343d3d750d48145856affc43d404318c88b98078a8c08b369c6829f5e68555cb7dc5
 DIST icinga-1.10.3.tar.gz 15390851 SHA256 0befd5484b73964fc10d8ea09fe0b80f51539714e7063f4f8c1e3b994bd65431 SHA512 7536f4707e14c9289e2913b4d8e52c1d6d36153e15f4e580acf71c37e3e3b53dbb2f5f27f187f269707ce227669aa032d8f1356ae24474b0a38699291328a800 WHIRLPOOL b08b395017ef8ea69b8dd257ea1c70a6fc6779c8be73a2f10bf02e1d826bdbeb64b17dc13ffeb75975605866bfb6745af8a0e6356d1cee5a5f82a77bd06eeed2
+DIST icinga-1.11.0.tar.gz 18693962 SHA256 a0a9927f7d53151760394b7235713c3a2e55c40c6351928e35f43cb26c3e2ecc SHA512 bef55f094b49874944c35e97233d2d96934e8207794d0e879eddeebb7db646e21674f8474a6852f2c0222b85be0a3fd32c29bc44fbdb39c7588a263310e8e17f WHIRLPOOL 48a790239cc3cd0ae629b467e257cb6914a7fe660c91ca62e8268e448ac65b5fd092145564212896c22c796b6552da89cd81a0dccd2a9c9b1867de6c793dbd16
 DIST icinga-1.9.5.tar.gz 17082606 SHA256 ae139c5e1054d014c294cc64b9053bba32240763fd4b3d72faa3197771240cba SHA512 1a902b24e28a2a4eb7e4f2e7274629f4d2c55463e1d8139b46c064d4d6ec99032a5e96ad8fe8d11b3c337b0eee2a1a35c798f0bee2cb2e6a03e70a17b6a21609 WHIRLPOOL ef28921e971a3b92edb984a39324ee42a9853367aa1e646f4f36fb9dbb6b98421553bcc684af29c289444722cef98fff9026cae24316971f586f2c4361335774
 EBUILD icinga-1.10.3.ebuild 7795 SHA256 026321444bf5eeabd4e44f0377ff738a697e73fcf162c490301b97c0075a3637 SHA512 6b15ac09a366eb9eea8b0dacf250988cac6e63aaa5eff64a7c17abfd5372cba6982f977f289cf9b20e4ceeeffa4128882d248d5a73e6b7b89bd36efdfe2613c0 WHIRLPOOL 52fc0ce16c76253e750e45af8ba4b2a2fa55658087b19d7299405a2024754731a69365a482769df0af4d70e0844155d9cdb0dc828128fb7d390f1887ea97a021
+EBUILD icinga-1.11.0.ebuild 7795 SHA256 a38acd2762a70440876cf4c8b8409a7049c3e18fe960301926ca7f2b947bbc5f SHA512 4c20a53ec78706b06500f38abaf920e2a716890098a7f32be142b8d5d90a9dfa2e134cfcdbe0b1035bb885aa6cb95db9c36cdc494e0727f8f82a6c27ec5154b3 WHIRLPOOL 57a9f99c1413b5f656ad757e78261884b10c400a046faa511e2f154e833abe10254f7d9da8f17906cb02e602ddcbaa9e4debfcaef4be0427c936df0d1cddc285
 EBUILD icinga-1.9.5.ebuild 7794 SHA256 49fae017c08c7e1c081566e6056457fda14b5ff5255669ae4cd05aecf846865e SHA512 aae5f3e946011c076dbf720b47e1360c81b261c8f04059c333023be42df6bc5f55e07596315b0a5a34426cd3efa186183ddf331e7649d26eaff2e919a3009b51 WHIRLPOOL 7ac49f9a9879b02b6b85166a8198d288921c72ebe8911d0f855e1244f9c3ee0450c8c6ce6b70500c541489aab7d7a4a58d336f4fcc22ba64615dc8a01a809589
-MISC ChangeLog 8052 SHA256 bd7ed7c3f77bc55882065076e4bcab62f3cc030401e3e8aed0168e9d750be211 SHA512 87531573dceff9f4c7a3696fac8f971ea2167e753fc824791b4e17925aabf4b6ffaa7f9f2f2ff641bbb62b1445fd86d3cd85b1bb15872786e434134e70e8f628 WHIRLPOOL 4d70feba1412cbc24ce9426760bbb3fb71282d2387e3b66bd52fd2a7ab1d9809e866f864224995def1f6a01532f46538d1a1b02037a839a25c2e1b9b68043a5f
+MISC ChangeLog 8170 SHA256 79fd6fa7809cebb02f55ada5130683e5087d3d3cbd111346c9df17417bdeff9d SHA512 45be22cef6cd297aa98a8638a5b5c9b00975f5d4136b9adbc052597c46acc0ae937973e170e2763a9d421700b407fa1ca021faa36edede43b52e2f565e9fcc01 WHIRLPOOL 6ef0dee6957d15f596295662cbc5751719b8d8616aeb0a649899845de0ddd91b073c7a182447afea334cf37ab9b0c49d6b140d96939927e9461238ab085ab37a
 MISC metadata.xml 705 SHA256 6433fd0f1d22d5abb31534b5e8b0804dcfec87e5f385b1a8726a9dba818233e0 SHA512 19385ac0dceb5319793c492b4687a0ce4b9fc6e00dc0aa76efa54280d8901f9738fdafd8c307a394aab89ca6c1aac03092b99c512dd1dc47241fe7db08f074d1 WHIRLPOOL 9e0341411d01328e4243d4db6342e0df648a56b648520cb68987f04432a7a59556fa5dfa1770b461668bf3692d5ffff0377b551c5680be607d9d8d2cae010efc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTBPUiAAoJECRx6z5ArFrDDq0P/iXNFWnuRcGFVg6iyMb35B9S
-bitiEr5coA0EQDPCp/a8kZumdnrQNx2LPPAu54uUovw4jZz9GaaX3ENcudcDPexD
-aYCqqJFusAwdAjjJsDdGhhqQUQTyofWIbRN/I3zrYPa4U+od/HLkvB7oZI3N7Kzz
-it1YyMWrrF/vq+WqTRKolnxVQHVrdsBYm4x0669J9I6POkwQKJBjzTqnKvQTOKDU
-0e4cYfuU1CQDChI/ZeYSx67rd4lTAyLAEeA3PKAe7JOFhJQVaO0xjZGHNBfjKmxs
-mIcwpMXgOJu+rJ2lG9pSWIXEyDE/Bb425NH2gl+Vj9JaK3Tm/c8fcK8wVJ8RDdd+
-4ifG1Aa9EF9dTOGFe12UhegfDdDXvdyU3xnniT0h6Q67LKSRgLDZpvTmd8YB1YNe
-SqTOx1+d2ct9gcBBxWEsrHxHRZJeRhwbBfxC3H1ojBp/Iumemd9ZDklzXvpn2fv8
-stuMaWsDzzzKNv78vPaQalX3HcN8257/Eo5gRUghlYwubVFYvyKLVz9KJTO3Sfte
-N9/BaFJfH08CVc3SIYJ79JQUWxQTxLkotmlHG3Tf6o/eqGXvwuy2jWXOa2YqsnSu
-R/VP1I8h+mtqCPnHqb0jfyEhW3Q/UyMEN2zTRJ9UMgBP9sPR2AsIE72QnP/oaCtK
-dYHFKY1I7ac1Ux9o2ldP
-=2KMj
+iQIcBAEBCAAGBQJTJiEHAAoJECRx6z5ArFrD09sP/RxUteqKahafEBA7VRcRwOTs
+SKU9/jhR6R0+GhUQe2g/KmrdyzP/h3lJ1KbVa+R7V4uqev1s84RtfeehbkFi7Mob
+CKNacJAZgErF0QU8/WTif/yI3u6cC9+kPfPlregI2in2QmBHUmHYKXU5ao05kgw9
+dTs3P+i5CKFFaLmw9tvZOjcfB/0QzGpGt1IlL6dEdi85uVHTrzTMESLpWk6zzZd7
+yxg8bJ3fOJHH+9nK8p152fsV7rCy7jIdgGYSdYo2sjY/tuv5JyzhSMIH/4LIS7DG
+wDSzV8OS36yeX04Kzzi0HIFi7AhEMrkHEJYDod7xVqh9myCQZb6JUQlB9vnhgHCU
+0Mc4U3NJQIjYvAK++RRlbuHqLKZeTcWTgRPfbt4lTEZ2buXJwyc7Cka3QImVcb0h
+1X3Sr8KAcnZhWCpmRFBJZUX57igmPzH0/UkhrcGGEbTQovrLTvwI6NLUPGDJonbU
+cHQDkvbnx9imPcAZFxglfE4MeEOQYJu+/M9s0iiYd+goellELmy0hvIdo6XtTTYj
+RnDCzKaBDwSLyUTZphVG/a74QF9HyS4ggHmTu7EhherevOq6F2cbC4QEw9JTkSGg
+0YbQF2dcn2sBkzL2KLqgPdLk9b/I543Y2NTzk0zmNv9cs7LyNOoVDrUBAjcY/qLh
+wxS7EkSaWbMt4bnuMcDc
+=KHTi
 -----END PGP SIGNATURE-----
